update ni_mano to support container
